<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olgazelenko.justjava.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_description"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:fontFamily="@font/brash_font"
            android:gravity="center"
            android:text="@string/coffee_order"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_70" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:background="@color/blackBlurBackground"
            android:defaultFocusHighlightEnabled="false"
            android:autofillHints=""
            android:selectAllOnFocus="false"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:paddingBottom="@dimen/edit_text_padding_top_bottom"
            android:paddingLeft="@dimen/edit_text_padding_left"
            android:paddingTop="@dimen/edit_text_padding_top_bottom"
            android:textColor="@color/white"
            android:textColorHighlight="@android:color/transparent"
            android:textSize="@dimen/text_size_20" />

        <ScrollView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/order_details_margin"
                android:layout_marginTop="@dimen/order_details_margin"
                android:background="@color/blackBlurBackground"
                android:orientation="vertical"
                android:paddingBottom="@dimen/order_details_padding_bottom"
                android:paddingLeft="@dimen/order_details_padding_left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/title_margin_top"
                    android:text="@string/topping"
                    style="@style/title"/>

                <CheckBox
                    android:id="@+id/whippedCream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ckb_margin_bottom"
                    android:onClick="updateTopping"
                    android:text="@string/whipped_cream"
                    style="@style/checkBox"/>

                <CheckBox
                    android:id="@+id/chocolate_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="updateTopping"
                    android:text="@string/chocolate"
                    style="@style/checkBox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    style="@style/title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/round_btn_size"
                        android:layout_height="@dimen/round_btn_size"
                        android:background="@drawable/circle_red"
                        android:baselineAligned="false"
                        android:onClick="increaseQuantity"
                        android:text="@string/plus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20" />

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/q_text_padding_left"
                        android:text="@string/zero"
                        android:textSize="@dimen/text_size_18" />

                    <Button
                        android:layout_width="@dimen/round_btn_size"
                        android:layout_height="@dimen/round_btn_size"
                        android:layout_marginLeft="@dimen/round_btn_margin_left"
                        android:background="@drawable/circle_red"
                        android:onClick="decreaseQuantity"
                        android:text="@string/minus"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    style="@style/title" />

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="@dimen/text_size_18"/>
            </LinearLayout>

        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/order_btn_margin_10"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>

